// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly case 1 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Welcome to React Native!
  </Text>
  <Text>
    This is a React Native snapshot test. 
    hello react-native
  </Text>
</View>
`;

exports[`renders correctly case 2 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
    Welcome to React Native!
  </Text>
  <Text>
    This is a React Native snapshot test. 
    hello snapshot
  </Text>
</View>
`;
